--- a/style.css
+++ b/style.css
@@ -71,11 +71,16 @@ h2 {
 }
 
 .add-items {
-  margin-top: 20px;
+  margin: 20px auto;
 }
 
 .add-items input {
   padding: 10px;
   outline: 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+input[type=submit]:hover, button:hover {
+  cursor: pointer;
+  font-weight: 550;
 }
